# omni-irc

./: .gitignore  .ocamlformat  CHANGES.md  LICENSE  README.md  dune  dune-project  omni-irc-client.opam  omni-irc-conn.opam  omni-irc-engine.opam  omni-irc-io-tcp.opam  omni-irc-io-tls.opam  omni-irc-io-unixsock.opam  omni-irc-sig.opam  omni-irc-tui.opam  omni-irc-ui-notty.opam  omni-irc-ui-notty.opam.template  omni-irc-ui.opam  omni-irc.opam
.github/workflows/: ci.yml
docs/: index.md  privacy-policy.md
docs/images/: Logo-Vector.ai  favicon.psd  omni-irc-logo-150x150.psd  omni-irc-logo-300x300.psd  omni-irc-logo-45x45.psd  omni-irc-logo-75x75.psd  omni-irc-logo-poster.psd  omni-irc-logo-wide.psd  omni-irc-logo.psd
installer/: build.dist.ini
installer/wix/: Product.wxs  Readme.md
omni-irc-client/lib/: client.ml  client.mli  cmd_core.ml  cmd_core.mli  cmd_intf.mli  cmd_key.ml  cmd_key.mli  dune  model_channel.ml  model_channel.mli  model_channel_list.ml  model_channel_list.mli  model_user.ml  model_user.mli
omni-irc-conn/lib/: connector.ml  connector.mli  connector_intf.mli  connector_tcp.ml  dune
omni-irc-engine/lib/: core.ml  core.mli  dune  engine.ml  engine.mli  event.ml  event.mli  parser.ml  parser.mli  parser_intf.mli
omni-irc-io-tcp/lib/: dune  tcp_io.ml  tcp_io.mli
omni-irc-io-tls/lib/: dune  tls_io.ml  tls_io.mli
omni-irc-io-tls/win/: dune  irc_io_tls.ml  tls_io.ml
omni-irc-io-unixsock/lib/: dune  unixsock_io.ml  unixsock_io.mli
omni-irc-sig/lib/: dune  io.mli
omni-irc-ui-headless/lib/: dune  irc_ui_headless.ml
omni-irc-ui-headless/lib/win/omni-irc-ui-headless/win/: dune  irc_ui_headless.ml
omni-irc-ui-headless/win/: dune  ui.ml
omni-irc-ui-loopback/lib/: dune  irc_ui_loopback.ml
omni-irc-ui-notty/lib/: dune  ui.ml  ui.mli
omni-irc-ui-notty/lib/win/: dune  irc_ui_notty.ml
omni-irc-ui-notty/win/: dune  ui.ml
omni-irc-ui/lib/: command.ml  command.mli  dune  ui_intf.mli
