; POSIX @info
(rule
 (alias info)
 (targets omni-info.txt)
 (deps %{exe:omni-irc-client/bin/main.exe})
 (enabled_if (<> %{os_type} "Win32"))
 (action
  (bash "ROOT=$(realpath %{workspace_root});
         EXE=$(realpath %{exe:omni-irc-client/bin/main.exe});
         printf 'context = %{context_name}\n' >  %{targets};
         printf 'system  = %{ocaml-config:system}\n' >> %{targets};
         printf 'ocaml   = %{ocaml-config:version}\n' >> %{targets};
         printf 'exe     = %s\n' \"$EXE\" >> %{targets};
         printf 'omni_posix = %s/bin/omni\n' \"$ROOT\" >> %{targets};
         printf 'omni_win   = %s/bin/omni.exe\n' \"$ROOT\" >> %{targets};"))
 (mode (promote (until-clean))))


; Windows @info (PowerShell)
(rule
 (alias info)
 (targets omni-info.txt)
 (deps %{exe:omni-irc-client/bin/main.exe})
 (enabled_if (= %{os_type} "Win32"))
 (action
  (run %{bin:powershell} -NoProfile -NonInteractive -Command
       " $Root = (Resolve-Path '%{workspace_root}').Path;
         $Exe  = (Resolve-Path '%{exe:omni-irc-client/bin/main.exe}').Path;
         $Lines = @(
           'context = %{context_name}',
           'system  = %{ocaml-config:system}',
           'ocaml   = %{ocaml-config:version}',
           ('exe     = ' + $Exe),
           ('omni_posix = ' + $Root + '/bin/omni'),
           ('omni_win   = ' + $Root + '/bin/omni.exe')
         );
         Set-Content -Encoding ASCII -Path '%{targets}' -Value $Lines; "))
 (mode (promote (until-clean))))
