opam-version: "2.0"
synopsis: "Omni-IRC (meta): multi-package OCaml IRC backend libraries"
description: """
Meta package for the Omni-IRC monorepo. Install the specific subpackages:
omni-irc-sig, omni-irc-conn, omni-irc-engine, omni-irc-io-{tcp,tls,unixsock},
omni-irc-ui, omni-irc-ui-notty, and optionally omni-irc-client.
"""
maintainer: "Jesse Greathouse <jesse.greathouse@gmail.com>"
authors: "Jesse Greathouse"
homepage: "https://github.com/jessegreathouse/omni-irc"
bug-reports: "https://github.com/jessegreathouse/omni-irc/issues"
license: "LicenseRef-OmniIRC-ViewOnly-1.0"
dev-repo: "git+https://github.com/jessegreathouse/omni-irc.git"

# Empty build so opam/dune won’t try to build/install anything for the meta
build: []

depends: [
  "ocaml" {>= "5.0"}
  # Optional: list subpackages so `opam install omni-irc` pulls them
  # remove any you don’t want auto-installed:
  "omni-irc-sig"
  "omni-irc-conn"
  "omni-irc-engine"
  "omni-irc-io-tcp"
  "omni-irc-io-tls"
  "omni-irc-io-unixsock"
  "omni-irc-ui"
  "omni-irc-ui-notty"
  # "omni-irc-client"  # include if you want the example CLI
]
